feat: implements `POST /orders/:id/receipt`
